Fix navigation on mobile

--- a/pattern-library/src/assets/toolkit/styles/toolkit.scss
+++ b/pattern-library/src/assets/toolkit/styles/toolkit.scss
@@ -607,6 +607,17 @@ input[type="submit"]:hover, input[type="submit"]:focus, input[type="submit"]:act
  * $HEADER
  * -----------------------------------------------------------------------------
  */
+header {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  align-items: flex-start;
+}
+@media all and (min-width: 768px) {
+  header {
+    display: block;
+  }
+}
 header form {
   margin-left: auto;
 }
@@ -614,18 +625,30 @@ header label {
   display: inline-block;
   cursor: pointer;
 }
-header label:before {
-  display: inline-block;
-  content: "";
-  height: 25px;
-  width: 25px;
-  background-image: url("img/icons/bars.svg");
-  background-size: 25px 25px;
-}
 @media all and (min-width: 768px) {
   header label {
     display: none;
   }
+}
+header label:before {
+  display: inline-block;
+  width: 25px;
+  height: 25px;
+  content: "";
+  background-image: url("img/icons/bars.svg");
+  background-size: 25px 25px;
+}
+header nav {
+  min-width: 100%;
+  padding-top: 2rem;
+}
+@media all and (min-width: 768px) {
+  header nav {
+    padding-top: 4rem;
+  }
+}
+header nav a {
+  text-decoration: none;
 }
 header [type=checkbox]:checked + nav {
   display: block;
@@ -1138,9 +1161,10 @@ section:after,
  * $LOGO
  * -----------------------------------------------------------------------------
  */
-.logo {
-  padding-bottom: 4rem;
-  padding-top: 4rem;
+@media all and (min-width: 768px) {
+  .logo {
+    padding-top: 4rem;
+  }
 }
 .logo a {
   display: block;
@@ -1149,17 +1173,26 @@ section:after,
 }
 
 .logo__icon {
-  display: block;
+  display: none;
   margin-left: auto;
   margin-right: auto;
   max-width: 100px;
   width: 100%;
 }
+@media all and (min-width: 768px) {
+  .logo__icon {
+    display: block;
+  }
+}
 
 .logo__text {
-  font-size: 1.825rem;
   font-weight: 700;
-  text-align: center;
+}
+@media all and (min-width: 768px) {
+  .logo__text {
+    font-size: 1.825rem;
+    text-align: center;
+  }
 }
 
 /**
